--- a/index.html
+++ b/index.html
@@ -5301,3 +5301,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
