--- a/index.html
+++ b/index.html
@@ -2325,3 +2325,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
