--- a/index.html
+++ b/index.html
@@ -2335,3 +2335,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
