--- a/index.html
+++ b/index.html
@@ -2331,3 +2331,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
