--- a/index.html
+++ b/index.html
@@ -2339,3 +2339,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
