--- a/index.html
+++ b/index.html
@@ -2369,3 +2369,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
