--- a/index.html
+++ b/index.html
@@ -5321,3 +5321,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
