--- a/index.html
+++ b/index.html
@@ -5323,3 +5323,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
