--- a/index.html
+++ b/index.html
@@ -2391,3 +2391,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
