--- a/index.html
+++ b/index.html
@@ -2381,3 +2381,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
