--- a/index.html
+++ b/index.html
@@ -2387,3 +2387,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
