--- a/index.html
+++ b/index.html
@@ -2389,3 +2389,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
