--- a/index.html
+++ b/index.html
@@ -2401,3 +2401,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
