--- a/index.html
+++ b/index.html
@@ -5341,3 +5341,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
