--- a/index.html
+++ b/index.html
@@ -2399,3 +2399,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
