--- a/index.html
+++ b/index.html
@@ -5345,3 +5345,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
