--- a/index.html
+++ b/index.html
@@ -5347,3 +5347,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
