--- a/index.html
+++ b/index.html
@@ -5357,3 +5357,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
