--- a/index.html
+++ b/index.html
@@ -5355,3 +5355,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
