--- a/index.html
+++ b/index.html
@@ -5353,3 +5353,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
