--- a/index.html
+++ b/index.html
@@ -2429,3 +2429,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
