--- a/index.html
+++ b/index.html
@@ -5365,3 +5365,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
