--- a/index.html
+++ b/index.html
@@ -2437,3 +2437,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
