--- a/index.html
+++ b/index.html
@@ -2447,3 +2447,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
