--- a/index.html
+++ b/index.html
@@ -2445,3 +2445,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
