--- a/index.html
+++ b/index.html
@@ -2461,3 +2461,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
