--- a/index.html
+++ b/index.html
@@ -5415,3 +5415,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
