--- a/index.html
+++ b/index.html
@@ -5419,3 +5419,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
