--- a/index.html
+++ b/index.html
@@ -2479,3 +2479,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
