--- a/index.html
+++ b/index.html
@@ -5417,3 +5417,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
