--- a/index.html
+++ b/index.html
@@ -2483,3 +2483,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
