--- a/index.html
+++ b/index.html
@@ -5435,3 +5435,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
