--- a/index.html
+++ b/index.html
@@ -2497,3 +2497,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
