--- a/index.html
+++ b/index.html
@@ -5465,3 +5465,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
