--- a/index.html
+++ b/index.html
@@ -5463,3 +5463,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
