--- a/index.html
+++ b/index.html
@@ -2577,3 +2577,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
