--- a/index.html
+++ b/index.html
@@ -2579,3 +2579,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
