--- a/index.html
+++ b/index.html
@@ -2601,3 +2601,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
