--- a/index.html
+++ b/index.html
@@ -2603,3 +2603,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
