--- a/index.html
+++ b/index.html
@@ -5521,3 +5521,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
