--- a/index.html
+++ b/index.html
@@ -2611,3 +2611,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
