--- a/index.html
+++ b/index.html
@@ -2613,3 +2613,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
