--- a/index.html
+++ b/index.html
@@ -5535,3 +5535,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
