--- a/index.html
+++ b/index.html
@@ -5537,3 +5537,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
