--- a/index.html
+++ b/index.html
@@ -5545,3 +5545,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
