--- a/index.html
+++ b/index.html
@@ -2641,3 +2641,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
