--- a/index.html
+++ b/index.html
@@ -2637,3 +2637,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
