--- a/index.html
+++ b/index.html
@@ -5547,3 +5547,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
