--- a/index.html
+++ b/index.html
@@ -2661,3 +2661,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
