--- a/index.html
+++ b/index.html
@@ -2653,3 +2653,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
