--- a/index.html
+++ b/index.html
@@ -5587,3 +5587,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
