--- a/index.html
+++ b/index.html
@@ -5585,3 +5585,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
