--- a/index.html
+++ b/index.html
@@ -5601,3 +5601,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
