--- a/index.html
+++ b/index.html
@@ -5605,3 +5605,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
