--- a/index.html
+++ b/index.html
@@ -5603,3 +5603,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
