--- a/index.html
+++ b/index.html
@@ -5599,3 +5599,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
