--- a/index.html
+++ b/index.html
@@ -5597,3 +5597,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
