--- a/index.html
+++ b/index.html
@@ -2691,3 +2691,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
