--- a/index.html
+++ b/index.html
@@ -2689,3 +2689,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
