--- a/index.html
+++ b/index.html
@@ -5611,3 +5611,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
