--- a/index.html
+++ b/index.html
@@ -5609,3 +5609,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
