--- a/index.html
+++ b/index.html
@@ -5615,3 +5615,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
