--- a/index.html
+++ b/index.html
@@ -2697,3 +2697,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
