--- a/index.html
+++ b/index.html
@@ -2699,3 +2699,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
