--- a/index.html
+++ b/index.html
@@ -2731,3 +2731,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
