--- a/index.html
+++ b/index.html
@@ -5671,3 +5671,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
