--- a/index.html
+++ b/index.html
@@ -2745,3 +2745,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
