--- a/index.html
+++ b/index.html
@@ -5693,3 +5693,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
