--- a/index.html
+++ b/index.html
@@ -2795,3 +2795,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
