--- a/index.html
+++ b/index.html
@@ -5721,3 +5721,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
