--- a/index.html
+++ b/index.html
@@ -2811,3 +2811,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
