--- a/index.html
+++ b/index.html
@@ -6663,3 +6663,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
