--- a/index.html
+++ b/index.html
@@ -6665,3 +6665,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
