--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -8,6 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>
     <!-- End Google Tag Manager -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/main.css">
@@ -49,10 +50,38 @@
     </form>
 
     <div id="output"></div>
+    <div class="centerflip">
+        <button class="flippy">Как это работает?</button>
+        <div class="flippanel">
+            <p>Сервис для генерации блоков позволяет вам создавать интерактивные элементы, которые появляются на странице в выбранном вами направлении. Вот как это работает:
+                <ul>
+                    <li><i>Добавление блоков:</i> Вы можете добавлять новые блоки с полями для ссылки (типа t.me/B4DCAT), описания и цвета.</li>
+                    <li><i>Выбор логотипа:</i> Добавьте логотип к блоку из предзагруженных вариантов или оставьте без логотипа.</li>
+                    <li><i>Выбор направления:</i> Выберите сторону, с которой будет появляться каждый блок: вправо вниз, влево вверх, вправо вверх или влево вниз.</li>
+                    <li><i>Задержка между блоками:</i> Установите время задержки между появлением каждого блока. Обычно добавляют 5мин (300сек)</li>
+                </ul>
+            </p>
+            <p>После заполнения всех полей вы можете сгенерировать ссылку на страницу display.html, 
+                где будут отображаться ваши блоки согласно выбранным параметрам.
+                <br> Эту ссылку необходимо вставить в OBS в источник браузер с размером <b>1920x1080</b> или размер вашего экрана
+            </p> 
+            <h3>Пример блока</h3>
+            <div style="width: 270px;height: 90px;background-color: #5ebdf1;text-align: center;display: flex;flex-direction: column;align-items: center;justify-content: center;border-radius: 5px;animation: shake 5s infinite alternate 0s;">
+                <p class="russo-one-regular" style="font-size: 1.5rem;margin: -20px 0 0 0;padding: 0;padding: 5px 30px;border-radius: 10px;background-color: #00000033;">t.me/B4DCAT</p>
+                <p style="position: absolute;font-family: 'Teko', sans-serif;margin: 55px 0 0 0;width: 100%;">ТЕЛЕГРАМ КАНАЛ</p>
+            </div>
+        </div> 
+      </div>
     <div class="powered-by">
         <p>Powered by <a href="https://twitch.tv/f_4_t_c_a_t" class="mr-vi" target="_blank">Mr Vi</a></p>
     </div>
     <script>
+        $(function () {
+            $(".flippy").on("click", function () {
+              $(this).parent().children(".flippanel").slideToggle("normal");
+            });
+          });
+          
        document.getElementById('addBlock').onclick = function() {
            const blocksContainer = document.getElementById('blocksContainer');
             
