--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/main.css">
-    <title>Генерация URL</title>
+    <title>Генератор pop-up</title>
     
 </head>
 <body>
