--- a/utilities/vkhost/index.html
+++ b/utilities/vkhost/index.html
@@ -14,8 +14,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
       <meta name="description" content="Получить access token для пользователя или группы ВКонтакте">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="/vkhost/style.css?200722" media="screen">
-      <script defer src="/vkhost/script.js?210829"></script>
+      <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+      <script defer src="script.js"></script>
    </head>
    <body>
       <section class="page-header">
