--- a/index.html
+++ b/index.html
@@ -6697,3 +6697,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
