--- a/index.html
+++ b/index.html
@@ -6717,3 +6717,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
