--- a/index.html
+++ b/index.html
@@ -6719,3 +6719,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
