--- a/index.html
+++ b/index.html
@@ -6707,3 +6707,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
