--- a/index.html
+++ b/index.html
@@ -6721,3 +6721,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
