--- a/index.html
+++ b/index.html
@@ -6731,3 +6731,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
