--- a/index.html
+++ b/index.html
@@ -6743,3 +6743,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
