--- a/index.html
+++ b/index.html
@@ -6741,3 +6741,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
