--- a/index.html
+++ b/index.html
@@ -6759,3 +6759,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
