--- a/index.html
+++ b/index.html
@@ -6783,3 +6783,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
