--- a/index.html
+++ b/index.html
@@ -6785,3 +6785,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
