--- a/index.html
+++ b/index.html
@@ -6781,3 +6781,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
