--- a/index.html
+++ b/index.html
@@ -6779,3 +6779,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
