--- a/index.html
+++ b/index.html
@@ -6777,3 +6777,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
