--- a/index.html
+++ b/index.html
@@ -6823,3 +6823,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
