--- a/index.html
+++ b/index.html
@@ -6819,3 +6819,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
