--- a/index.html
+++ b/index.html
@@ -6817,3 +6817,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
