--- a/index.html
+++ b/index.html
@@ -6815,3 +6815,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
