--- a/index.html
+++ b/index.html
@@ -6825,3 +6825,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
