--- a/index.html
+++ b/index.html
@@ -6833,3 +6833,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
