--- a/index.html
+++ b/index.html
@@ -6827,3 +6827,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
