--- a/index.html
+++ b/index.html
@@ -6899,3 +6899,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
