--- a/index.html
+++ b/index.html
@@ -6915,3 +6915,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
