--- a/index.html
+++ b/index.html
@@ -6919,3 +6919,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
