--- a/index.html
+++ b/index.html
@@ -6947,3 +6947,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
