--- a/index.html
+++ b/index.html
@@ -6987,3 +6987,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
