--- a/index.html
+++ b/index.html
@@ -6993,3 +6993,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
