--- a/index.html
+++ b/index.html
@@ -6997,3 +6997,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
