--- a/index.html
+++ b/index.html
@@ -7065,3 +7065,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
