--- a/index.html
+++ b/index.html
@@ -7063,3 +7063,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
