--- a/index.html
+++ b/index.html
@@ -7067,3 +7067,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
