--- a/index.html
+++ b/index.html
@@ -7071,3 +7071,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
