--- a/index.html
+++ b/index.html
@@ -7085,3 +7085,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
