--- a/index.html
+++ b/index.html
@@ -7089,3 +7089,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
