--- a/index.html
+++ b/index.html
@@ -7095,3 +7095,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
