--- a/index.html
+++ b/index.html
@@ -7161,3 +7161,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
