--- a/index.html
+++ b/index.html
@@ -7163,3 +7163,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
