--- a/index.html
+++ b/index.html
@@ -7159,3 +7159,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
