--- a/index.html
+++ b/index.html
@@ -7183,3 +7183,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
