--- a/index.html
+++ b/index.html
@@ -7187,3 +7187,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
