--- a/index.html
+++ b/index.html
@@ -7189,3 +7189,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
