--- a/index.html
+++ b/index.html
@@ -7221,3 +7221,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
