--- a/index.html
+++ b/index.html
@@ -7213,3 +7213,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
