--- a/index.html
+++ b/index.html
@@ -7223,3 +7223,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
