--- a/index.html
+++ b/index.html
@@ -7217,3 +7217,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
