--- a/index.html
+++ b/index.html
@@ -7225,3 +7225,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
