--- a/index.html
+++ b/index.html
@@ -7241,3 +7241,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
