--- a/index.html
+++ b/index.html
@@ -7243,3 +7243,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
