--- a/index.html
+++ b/index.html
@@ -7275,3 +7275,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
