--- a/index.html
+++ b/index.html
@@ -7277,3 +7277,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
