--- a/index.html
+++ b/index.html
@@ -7283,3 +7283,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
