--- a/index.html
+++ b/index.html
@@ -7309,3 +7309,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
