--- a/index.html
+++ b/index.html
@@ -7305,3 +7305,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
