--- a/index.html
+++ b/index.html
@@ -7345,3 +7345,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
