--- a/index.html
+++ b/index.html
@@ -7343,3 +7343,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
