--- a/index.html
+++ b/index.html
@@ -7365,3 +7365,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
