--- a/index.html
+++ b/index.html
@@ -7393,3 +7393,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
