--- a/index.html
+++ b/index.html
@@ -7429,3 +7429,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
