--- a/index.html
+++ b/index.html
@@ -7443,3 +7443,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
