--- a/index.html
+++ b/index.html
@@ -7453,3 +7453,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
