--- a/index.html
+++ b/index.html
@@ -7455,3 +7455,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
