--- a/index.html
+++ b/index.html
@@ -7473,3 +7473,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
