--- a/index.html
+++ b/index.html
@@ -7479,3 +7479,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
