--- a/index.html
+++ b/index.html
@@ -7477,3 +7477,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
