--- a/index.html
+++ b/index.html
@@ -7475,3 +7475,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
