--- a/index.html
+++ b/index.html
@@ -7503,3 +7503,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
