--- a/index.html
+++ b/index.html
@@ -7567,3 +7567,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
