--- a/index.html
+++ b/index.html
@@ -7557,3 +7557,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
