--- a/index.html
+++ b/index.html
@@ -7595,3 +7595,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
