--- a/index.html
+++ b/index.html
@@ -7591,3 +7591,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
