--- a/index.html
+++ b/index.html
@@ -7597,3 +7597,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
