--- a/index.html
+++ b/index.html
@@ -7599,3 +7599,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
