--- a/index.html
+++ b/index.html
@@ -7615,3 +7615,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
