--- a/index.html
+++ b/index.html
@@ -7645,3 +7645,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
