--- a/index.html
+++ b/index.html
@@ -7639,3 +7639,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
