--- a/index.html
+++ b/index.html
@@ -7649,3 +7649,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
