--- a/index.html
+++ b/index.html
@@ -7641,3 +7641,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
