--- a/index.html
+++ b/index.html
@@ -7647,3 +7647,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
